--- a/parsers/ras_reg_def.rdl
+++ b/parsers/ras_reg_def.rdl
@@ -37,7 +37,7 @@ reg ERR_CTRL_0_first {
     RES0                                        RES0_11[11:11];
     RES0                                        RES0_10[10:10];
     RES0                                        RES0_9[9:9];
-    field {sw = rw; hw = r;}                    CFI[8:8] = 1'b1;
+    field {sw = rw; hw = r;}                    CFI[8:8] = 1'b0;
     RES0                                        RES0_7[7:7];
     RES0                                        RES0_6[6:6];
     RES0                                        RES0_5[5:5];
@@ -58,34 +58,34 @@ reg ERR_CTRL_1 {
 
 reg ERR_ADDR_0 {
     desc = "Error record address register 0";
-    field {sw = r; hw = w;}                     PADDR_31_0[31:0] = 32'b0;
+    field {sw = rw; hw = w;}                    PADDR_31_0[31:0] = 32'h0;
 };
 reg ERR_ADDR_1 {
     desc = "Error record address register 1";
     field {sw = r; hard_wired = true; hw = na;} NS[31:31] = 1'b0;
     field {sw = r; hard_wired = true; hw = na;} SI[30:30] = 1'b1;
-    field {sw = rw; hw = na;}                   AI[29:29] = 1'b0;
-    field {sw = rw; hw = na;}                   VA[28:28] = 1'b0;
+    field {sw = r; hard_wired = true; hw = na;} AI[29:29] = 1'b0;
+    field {sw = r; hard_wired = true; hw = na;} VA[28:28] = 1'b0;
     RES0                                        RES0_27_24[27:24];
-    field {sw = r; hw = w;}                     PADDR_55_32[23:0] = 23'b0;
+    field {sw = rw; hw = w;}                    PADDR_55_32[23:0] = 24'h0;
 };
 
 reg ERR_STATUS_0 {
     desc = "Error record primary status register 0";
-    field {sw = r; hard_wired = true; hw = na;} AV[31:31] = 1'b0;
+    field {sw = rw; onwrite = woclr;}           AV[31:31] = 1'b0;
     field {sw = rw; onwrite = woclr;}           V[30:30] = 1'b0;
     field {sw = rw; onwrite = woclr;}           UE[29:29] = 1'b0;
     field {sw = r; hard_wired = true; hw = na;} ER[28:28] = 1'b0;
-    field {sw = rw; onwrite = woclr;}           OF[27:27] = 1'b1;
+    field {sw = rw; onwrite = woclr;}           OF[27:27] = 1'b0;
     field {sw = rw; onwrite = woclr;}           MV[26:26] = 1'b0;
-    field {sw = rw; onwrite = woclr;}           CE[25:24] = 2'b10;
+    field {sw = rw; onwrite = woclr;}           CE[25:24] = 2'b00;
     field {sw = r; hard_wired = true; hw = na;} DE[23:23] = 1'b0;
     field {sw = rw; onwrite = woclr;}           PN[22:22] = 1'b0;
-    field {sw = rw; onwrite = woclr;}           UET[21:20] = 2'b11;
+    field {sw = rw; onwrite = woclr;}           UET[21:20] = 2'b00;
     field {sw = r; hard_wired = true; hw = na;} CI[19:19] = 1'b0;
     RES0                                        RES0_18_16[18:16];
     RES0                                        RES0_15_8[15:8];
-    field {sw = r;}                             SERR[7:0] = 8'b0;
+    field {sw = rw;}                            SERR[7:0] = 8'h0;
 };
 reg ERR_STATUS_1 {
     desc = "Error record primary status register 1";
@@ -98,9 +98,9 @@ reg ERR_MISC0_0 {
 };
 reg ERR_MISC0_1 {
     desc = "Error record miscellaneous register 0_1";
-    field {sw = rw; onwrite = woset; hw = r;}   CEC_WD[31:24] = 8'h0;
-    field {sw = rw; onwrite = woset; hw = r;}   WD_STEP[23:20] = 4'b0;
-    field {sw = rw; onwrite = woset; hw = r;}   CEC_TH[19:17] = 3'b0;
+    field {sw = rw; hw = r;}                    CEC_WD[31:24] = 8'h0;
+    field {sw = rw; hw = r;}                    WD_STEP[23:20] = 4'b0;
+    field {sw = rw; hw = r;}                    CEC_TH[19:17] = 3'b0;
     RES0                                        RES0_16_8[16:8];
     field {sw = rw; onwrite = woclr;}           OF[7:7] = 1'b0;
     field {sw = rw; onwrite = woset;}           CEC[6:0] = 7'b0;
@@ -112,8 +112,9 @@ reg ERR_MISC1_0 {
 };
 reg ERR_MISC1_1 {
     desc = "Error record miscellaneous register 1_1";
-    RES0                        RES0_31_1[31:1];
-    field {sw = rw; hw = r;}    FMASK[0:0] = 1'b0;
+    RES0                        RES0_31_2[31:2];
+    field {sw = rw; hw = r;}    FMASK[1:1] = 1'b0;
+    field {sw = rw; hw = r;}    FEN[0:0] = 1'b0;
 };
 
 reg ERR_MISC2_0 {
