4/9 Just a small modification

--- a/generators/rtl/templates/graphviz_template.jinja
+++ b/generators/rtl/templates/graphviz_template.jinja
@@ -16,7 +16,7 @@ node[shape="retangle", color="#9df7e4", style="filled", fillcolor="#9df7e4", wid
 {{node.inst_name}}[label="regslv"]
 {%- endmacro -%}
 
-{# 3rd_party_ip #}
+{# 3rd_party_ip 但还没试过 #}
 {%- macro hj_3rd_party_ip_typedef(node) %}
 node[shape="retangle", color="#E890FE", style="filled", fillcolor="#E890FE", width=.8, fontname="FangSong"];
 {{node.inst_name}}[label="3rd_party_ip"]
